changed user ui, added playpen sans font, user can click through posts and replies through eachother, fixed usersrightside tab to nav to profile with posts being updated, added an alert for wrong login credentials, user can delete a post they've posted,working on replies tab on profile page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon"  href="favicon.svg" sizes="any" type="image/svg+xml"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,200,300,regular,500,600,700,100italic,200italic,300italic,italic,500italic,600italic,700italic" rel="stylesheet" />
+
+<link href="https://fonts.googleapis.com/css?family=Playpen+Sans:100,200,300,regular,500,600,700,800" rel="stylesheet" />
+
     <title>Life Invader</title>
   </head>
   <body>
